--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="steven hecking, software engineer">
+  <meta name="author" content="steven hecking">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>steven hecking - software engineer</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">steven hecking</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -41,13 +41,16 @@
             <a class="nav-link js-scroll-trigger" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio Showcase</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -106,7 +109,7 @@
     </div>
   </section>
 
-  <!-- Portfolio Grid -->
+  <!-- Project Showcase (Portfolio) -->
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
       <div class="row">
@@ -204,7 +207,7 @@
     </div>
   </section>
 
-  <!-- About -->
+  <!-- About Me-->
   <section class="page-section" id="about">
     <div class="container">
       <div class="row">
@@ -286,11 +289,11 @@
   </section>
 
   <!-- Team -->
-  <section class="bg-light page-section" id="team">
+  <section class="bg-light page-section" id="skills">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+          <h2 class="section-heading text-uppercase">My Skills</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
@@ -376,7 +379,7 @@
     </div>
   </section>
 
-  <!-- Clients -->
+  <!-- Skills -->
   <section class="py-5">
     <div class="container">
       <div class="row">
@@ -404,7 +407,19 @@
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Resume -->
+  <section class="page-section" id="resume">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Resume</h2>
+          <h3 class="section-subheading text-muted">Resume link or preview here</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Info -->
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row">
@@ -454,23 +469,18 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">copyright &copy; steven hecking 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
+              <a href="https://github.com/shecking">
+                <i class="fab fa-github">GitHub</i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+              <a href="https://www.linkedin.com/in/stevenhecking/">
+                <i class="fab fa-linkedin-in">LinkedIn</i>
               </a>
             </li>
           </ul>
