--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link js-scroll-trigger" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio Showcase</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
@@ -288,7 +288,7 @@
     </div>
   </section>
 
-  <!-- Team -->
+  <!-- Skills -->
   <section class="bg-light page-section" id="skills">
     <div class="container">
       <div class="row">
@@ -379,7 +379,19 @@
     </div>
   </section>
 
-  <!-- Skills -->
+  <!-- Resume -->
+  <section class="page-section" id="resume">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Resume</h2>
+          <h3 class="section-subheading text-muted">Resume link or preview here</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Logos -->
   <section class="py-5">
     <div class="container">
       <div class="row">
@@ -407,24 +419,12 @@
     </div>
   </section>
 
-  <!-- Resume -->
-  <section class="page-section" id="resume">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Resume</h2>
-          <h3 class="section-subheading text-muted">Resume link or preview here</h3>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Contact Info -->
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
+          <h2 class="section-heading text-uppercase">Contact Me</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
