Renaming and adding brief placeholders

--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-lead-in">software engineer | web developer | musician</div>
+        <div class="intro-heading text-uppercase">steven hecking</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">tell me more</a>
       </div>
     </div>
   </header>
 
   <!-- Services -->
+  <!-- The three bullet points -->
   <section class="page-section" id="services">
     <div class="container">
       <div class="row">
@@ -110,6 +111,7 @@
   </section>
 
   <!-- Project Showcase (Portfolio) -->
+  <!-- Portfolio of four projects here -->
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
       <div class="row">
@@ -119,7 +121,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-3 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -129,11 +131,11 @@
             <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Project 4</h4>
+            <p class="text-muted">Description</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-3 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -143,11 +145,11 @@
             <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Project 3</h4>
+            <p class="text-muted">Description</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-3 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -157,11 +159,11 @@
             <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Project 2</h4>
+            <p class="text-muted">Description</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-3 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -171,36 +173,8 @@
             <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4>Project 1</h4>
+            <p class="text-muted">Description</p>
           </div>
         </div>
       </div>
@@ -208,6 +182,7 @@
   </section>
 
   <!-- About Me-->
+  <!-- Short blurb explaining who you are and some background -->
   <section class="page-section" id="about">
     <div class="container">
       <div class="row">
@@ -289,6 +264,7 @@
   </section>
 
   <!-- Skills -->
+  <!-- All the skills you have that may be helpful on the job-->
   <section class="bg-light page-section" id="skills">
     <div class="container">
       <div class="row">
@@ -385,13 +361,14 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Resume</h2>
-          <h3 class="section-subheading text-muted">Resume link or preview here</h3>
+          <h3 class="section-subheading text-muted">Resume link or preview here, ability to download</h3>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Logos -->
+  <!-- Section for logs of skills -->
   <section class="py-5">
     <div class="container">
       <div class="row">
