--- a/index.html
+++ b/index.html
@@ -63,10 +63,16 @@
   <!-- Header -->
   <header class="masthead">
     <div class="container">
-      <div class="intro-text">
-        <div class="intro-lead-in">software engineer | web developer | musician</div>
-        <div class="intro-heading text-uppercase">steven hecking</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">tell me more</a>
+      <div class="row">
+        <div class="mx-auto rounded-circle" src="img/shecking/sheckingcircleheadshot">
+        </div>
+      </div>
+      <div class="row">
+        <div class="intro-text">
+          <div class="intro-lead-in">software engineer | web developer | musician</div>
+          <div class="intro-heading text-uppercase">steven hecking</div>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">tell me more</a>
+        </div>
       </div>
     </div>
   </header>
