--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   <header class="masthead">
     <div class="container">
       <div class="row">
-        <div class="mx-auto rounded-circle" src="img/shecking/sheckingcircleheadshot">
+        <div class="col-sm-12">
+          <img class="mx-auto rounded-circle" src="img/shecking/sheckingcircleheadshot" alt=""></div>
         </div>
       </div>
       <div class="row">
