--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <header class="masthead">
     <div class="container">
       <div class="row">
-        <img class="mx-auto rounded-circle" src="img/shecking/sheckingcircleheadshot" alt="">
+        <img class="headshot rounded-circle" src="img/shecking/sheckingcircleheadshot" alt="">
       </div>
       <div class="row">
         <div class="intro-text">
