--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
   <header class="masthead">
     <div class="container">
       <div class="row">
-        <img class="headshot rounded-circle" src="img/shecking/sheckingcircleheadshot" alt="">
-      </div>
-      <div class="row">
         <div class="intro-text">
+          <img class=".team-member rounded-circle" src="img/shecking/sheckingcircleheadshot" alt="">
           <div class="intro-lead-in">software engineer | web developer | musician</div>
           <div class="intro-heading text-uppercase">steven hecking</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">tell me more</a>
