--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row">
         <div class="intro-text">
-          <img class=".team-member rounded-circle" src="img/shecking/sheckingcircleheadshot" alt="">
+          <img class="headshot rounded-circle" src="img/shecking/sheckingcircleheadshot" alt="">
           <div class="intro-lead-in">software engineer | web developer | musician</div>
           <div class="intro-heading text-uppercase">steven hecking</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">tell me more</a>
