services section CSS edits

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <div class="container">
       <img class="headshot" src="img/shecking/sheckingcircleheadshot.jpg" alt="" height=400 width=400>
       <div class="intro-text">
-        <div class="intro-lead-in">software engineer | web developer | musician</div>
-        <div class="intro-heading text-uppercase">steven hecking</div>
+        <div class="intro-lead-in">software engineer | full-stack developer | musician</div>
+        <div class="intro-heading">steven hecking</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">tell me more</a>
       </div>
     </div>
@@ -79,33 +79,33 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Services</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-keyboard fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">E-Commerce</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">Software Engineering</h4>
+          <p class="text-muted">I have experience building efficient, user-friendly web applications from the ground up.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-balance-scale fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Responsive Design</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">Full-Stack Development</h4>
+          <p class="text-muted">I combine the analytic and the creative, using a variety of front- and back-end frameworks.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-music fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Web Security</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">Music</h4>
+          <p class="text-muted">I am an astute, accomplished musician holding two degrees in composition, and working to integrate the arts with modern technology.</p>
         </div>
       </div>
     </div>
