Editing portfolio section, adding images

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">These are some of my most recent projects:</h3>
         </div>
       </div>
       <div class="row">
@@ -126,56 +126,56 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-ellipsis-h fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Project 4</h4>
-            <p class="text-muted">Description</p>
+            <h4>Composer's Companion</h4>
+            <p class="text-muted">for writing music on the go</p>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-ellipsis-h fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Project 3</h4>
-            <p class="text-muted">Description</p>
+            <h4>HangOut</h4>
+            <p class="text-muted">for public event and RSVP management</p>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-ellipsis-h fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Project 2</h4>
-            <p class="text-muted">Description</p>
+            <h4>Practice Session Tracker</h4>
+            <p class="text-muted">for logging your musical practice time</p>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-ellipsis-h fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Project 1</h4>
-            <p class="text-muted">Description</p>
+            <h4>Tic-Tac-Toe</h4>
+            <p class="text-muted">for a quick fix of a classic game</p>
           </div>
         </div>
       </div>
@@ -480,6 +480,7 @@
   <!-- Portfolio Modals -->
 
   <!-- Modal 1 -->
+  <!-- Project 4 - Composer's Companion -->
   <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -493,18 +494,19 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Composer's Companion</h2>
+                <p class="item-intro text-muted">for writing music on the go</p>
+                <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project4-full.jpg" alt="">
+                <a class='composers-companion' href='https://shecking.github.io/composers-companion-client/#/'>View this project here</a>
+                <p>This app allows you to quickly create and store sketches of your musical ideas, wherever you are and whenever you need, and without the constraints of complex notation programs.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Threads</li>
-                  <li>Category: Illustration</li>
+                  <li>Date: March-April 2020</li>
+                  <li>Built for: GA Boston</li>
+                  <li>Category: Visual and Performing Arts</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  close</button>
               </div>
             </div>
           </div>
@@ -514,6 +516,7 @@
   </div>
 
   <!-- Modal 2 -->
+  <!-- Project 3 - HangOut -->
   <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -527,18 +530,19 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">HangOut</h2>
+                <p class="item-intro text-muted">for public event and RSVP management</p>
+                <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project3-full.jpg" alt="">
+                <a class='hangout' href='https://we-work-on-master.github.io/hangout-client/'>View this project here</a>
+                <p>This app gives its users a simple, straightforward way to create and post public events for others to view and RSVP to.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Explore</li>
-                  <li>Category: Graphic Design</li>
+                  <li>Date: March 2020</li>
+                  <li>Built for: GA Boston</li>
+                  <li>Category: Public Events</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  close</button>
               </div>
             </div>
           </div>
@@ -548,6 +552,7 @@
   </div>
 
   <!-- Modal 3 -->
+  <!-- Project 2 - Practice Session Tracker -->
   <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -561,18 +566,19 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Practice Session Tracker</h2>
+                <p class="item-intro text-muted">for logging your musical practice time</p>
+                <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project2-full.jpg" alt="">
+                <a class='practice-session-tracker' href='https://shecking.github.io/client-project2/'>View this project here</a>
+                <p>This app was built for the modern musician; performers, conductors, hobbyists, and everyone in between. Users can log and store their personal practicing sessions, enabling them to see their progress over time.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Finish</li>
-                  <li>Category: Identity</li>
+                  <li>Date: February-March 2020</li>
+                  <li>Built for: GA Boston</li>
+                  <li>Category: Personal Tracker</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  close</button>
               </div>
             </div>
           </div>
@@ -582,6 +588,7 @@
   </div>
 
   <!-- Modal 4 -->
+  <!-- Project 1 - Tic-Tac-Toe -->
   <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -595,86 +602,19 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Tic-Tac-Toe</h2>
+                <a class='tic-tac-toe' href='https://shecking.github.io/tictactoe-client/'>View this project here</a>
+                <p class="item-intro text-muted">for a quick fix of a classic game</p>
+                <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project1-full.jpg" alt="">
+                <p>Let's cut to the chase; this is an app for playing the age-old, time-honored game of Tic-Tac-Toe. Find a friend, start it up, and play as many rounds as you like! </p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Lines</li>
-                  <li>Category: Branding</li>
+                  <li>Date: February 2020</li>
+                  <li>Built for: GA Boston</li>
+                  <li>Category: Games</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 5 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Southwest</li>
-                  <li>Category: Website Design</li>
-                </ul>
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close Project</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 6 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Window</li>
-                  <li>Category: Photography</li>
-                </ul>
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close Project</button>
+                  close</button>
               </div>
             </div>
           </div>
