--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/agency.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 </head>
 
@@ -129,7 +130,7 @@
                 <i class="fas fa-ellipsis-h fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/shecking/projects-thumbnail/project4-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Composer's Companion</h4>
@@ -143,7 +144,7 @@
                 <i class="fas fa-ellipsis-h fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/shecking/projects-thumbnail/project3-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>HangOut</h4>
@@ -157,7 +158,7 @@
                 <i class="fas fa-ellipsis-h fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/shecking/projects-thumbnail/project2-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Practice Session Tracker</h4>
@@ -171,7 +172,7 @@
                 <i class="fas fa-ellipsis-h fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/shecking/projects-thumbnail/project1-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Tic-Tac-Toe</h4>
@@ -403,7 +404,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Me</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row">
@@ -533,7 +534,7 @@
                 <h2 class="text-uppercase">HangOut</h2>
                 <p class="item-intro text-muted">for public event and RSVP management</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project3-full.jpg" alt="">
-                <a class='hangout' href='https://we-work-on-master.github.io/hangout-client/'>View this project here</a>
+                <a class='hangout' href='https://shecking.github.io/hangout-client/'>View this project here</a>
                 <p>This app gives its users a simple, straightforward way to create and post public events for others to view and RSVP to.</p>
                 <ul class="list-inline">
                   <li>Date: March 2020</li>
@@ -603,9 +604,9 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Tic-Tac-Toe</h2>
-                <a class='tic-tac-toe' href='https://shecking.github.io/tictactoe-client/'>View this project here</a>
                 <p class="item-intro text-muted">for a quick fix of a classic game</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project1-full.jpg" alt="">
+                <a class='tic-tac-toe' href='https://shecking.github.io/tictactoe-client/'>View this project here</a>
                 <p>Let's cut to the chase; this is an app for playing the age-old, time-honored game of Tic-Tac-Toe. Find a friend, start it up, and play as many rounds as you like! </p>
                 <ul class="list-inline">
                   <li>Date: February 2020</li>
