--- a/index.html
+++ b/index.html
@@ -278,8 +278,24 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="devicon-atom-original colored">
-              ::before
+            <i class="devicon devicon-atom-original colored">
+              <!-- ::before -->
+            </i>
+            <p>Atom</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-atom-original colored">
+              <!-- ::before -->
+            </i>
+            <p>Atom</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-atom-original colored">
+              <!-- ::before -->
             </i>
             <p>Atom</p>
           </div>
