atom font size test

--- a/index.html
+++ b/index.html
@@ -294,8 +294,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="devicon devicon-atom-original colored">
-              <!-- ::before -->
+            <i class="devicon-atom-original colored devicon">
             </i>
             <p>Atom</p>
           </div>
