adding all logos in skills section

--- a/index.html
+++ b/index.html
@@ -278,31 +278,122 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="devicon devicon-atom-original colored">
-              <!-- ::before -->
-            </i>
+            <i class="devicon devicon-atom-original colored"></i>
             <p>Atom</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="devicon devicon-atom-original colored">
-              <!-- ::before -->
-            </i>
-            <p>Atom</p>
+            <i class="devicon devicon-bootstrap-plain colored"></i>
+            <p>Bootstrap</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="devicon-atom-original colored devicon">
-            </i>
-            <p>Atom</p>
+            <i class="devicon devicon-chrome-plain colored"></i>
+            <p>Chrome DevTools</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-css3-plain colored"></i>
+            <p>CSS3</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-express-original colored"></i>
+            <p>express</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-git-plain colored"></i>
+            <p>Git</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-github-plain colored"></i>
+            <p>GitHub</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-grunt-plain colored"></i>
+            <p>grunt</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-heroku-plain colored"></i>
+            <p>Heroku</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-html5-plain colored"></i>
+            <p>HTML5</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-javascript-plain colored"></i>
+            <p>JavaScript</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-jquery-plain colored"></i>
+            <p>jQuery</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-mongodb-plain colored"></i>
+            <p>mongoDB</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-nodejs-plain colored"></i>
+            <p>nodejs</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-postgresql-plain colored"></i>
+            <p>PostgreSQL</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-rails-plain colored"></i>
+            <p>Rails</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-react-original colored"></i>
+            <p>React</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-ruby-plain colored"></i>
+            <p>Ruby</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-sass-original colored"></i>
+            <p>SASS</p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+          <p class="large text-muted"></p>
         </div>
       </div>
     </div>
@@ -315,35 +406,6 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Resume</h2>
           <h3 class="section-subheading text-muted">Resume link or preview here, ability to download</h3>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Logos -->
-  <!-- Section for logs of skills -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-          </a>
         </div>
       </div>
     </div>
