remove/replace about section with my content

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <i class="fas fa-music fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Music</h4>
-          <p class="text-muted">I am an astute, accomplished musician holding two degrees in composition, and working to integrate the arts with modern technology.</p>
+          <p class="text-muted">I am an accomplished musician who holds two degrees in composition, and works to integrate the arts with modern technology.</p>
         </div>
       </div>
     </div>
@@ -189,77 +189,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="timeline">
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
-              </div>
-            </li>
-          </ul>
+          <h2 class="section-heading text-uppercase">About Me</h2>
+          <h3 class="section-subheading text-muted">From professional musician to astute programmer</h3>
+          <p>​Originally from Greenville, Pennsylvania, I am a newly minted software engineer  based in Boston, Massachusetts. In the spring of 2020, I completed the GA Software Engineering Immersive program in Boston, which rapidly instilled me with the tools and skills in programming, software development, and technical problem solving I need to move forward in the technology industry. As of April 2020, I'm actively seeking employment as a junior software developer/software engineer in Boston, as well as the New England area at large.</p>
+
+          <p>I am also a composer-conductor of contemporary art music! I hold a Master of Music candidate in Music Composition at Butler University in Indianapolis, Indiana, as well a Bachelor of Music degree in theory and composition from The College of Wooster in Wooster, Ohio. While at Butler, I studied composition with Michael Schelle and James Aikman, and choral conducting with Eric Stark and John Perkins. As part of this education, I spent the spring of 2017 at the Academy of Music in Krakow, Poland, studying composition, analysis of contemporary music, and conducting. While at Wooster, I studied composition with Jack Gallagher and choral conducting with Lisa Wong, as well as completing a minor in psychology.</p>
         </div>
       </div>
     </div>
@@ -271,8 +205,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">My Skills</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Skills and Proficiencies</h2>
+          <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row">
