--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
   </section>
 
   <!-- Project Showcase (Portfolio) -->
-  <!-- Portfolio of four projects here -->
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
       <div class="row">
@@ -184,7 +183,6 @@
   </section>
 
   <!-- About Me-->
-  <!-- Short blurb explaining who you are and some background -->
   <section class="page-section" id="about">
     <div class="container">
       <div class="row">
@@ -200,7 +198,6 @@
   </section>
 
   <!-- Skills -->
-  <!-- All the skills you have that may be helpful on the job-->
   <section class="bg-light page-section" id="skills">
     <div class="container">
       <div class="row">
@@ -339,7 +336,9 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Resume</h2>
-          <h3 class="section-subheading text-muted">Resume link or preview here, ability to download</h3>
+          <h3 class="section-subheading text-muted">View or download my resume below</h3>
+          <a href="/img/shecking/StevenHeckingResume.pdf">View</a>
+          <a href="/img/shecking/StevenHeckingResume.pdf" download>Download</a>
         </div>
       </div>
     </div>
