--- a/index.html
+++ b/index.html
@@ -350,7 +350,10 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Me</h2>
-          <h3 class="section-subheading text-muted"></h3>
+          <h3 class="section-subheading text-muted">Helpful links:</h3>
+          <p><a href="https://github.com/shecking">My GitHub</a></p>
+          <p><a href="https://www.linkedin.com/in/stevenhecking/">My LinkedIn</a></p>
+          <p><a href="#">My GA Profile (coming soon)</a></p>
         </div>
       </div>
       <div class="row">
